fix: card placeholder image being too large

--- a/src/components/media-card/MediaCard.module.scss
+++ b/src/components/media-card/MediaCard.module.scss
@@ -25,7 +25,7 @@
 }
 
 .placeholder-backdrop {
-  aspect-ratio: 500/281;
+  object-fit: unset;
 
   background-color: #555;
 }
